new logo add end some css changes

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -335,7 +335,6 @@ p {
 }
 .user-notification .dropdown-menu{
 	width: 340px;
-	max-height: 400px;
 }
 .notification-list{}
 .notification-list ul li{
@@ -387,7 +386,7 @@ p {
 ==============================================================*/
 .brand-logo{
 	width: 250px;
-	padding: 15px 20px 10px;
+	height: 70px;
 	background: #0069d9;
 }
 .brand-logo a{
@@ -398,8 +397,9 @@ p {
 	letter-spacing: 0.050em;
 	font-weight: 500;
 	line-height: 45px;
-	padding-left: 45px;
 	font-family: 'Work Sans', sans-serif;
+	padding: 10px 20px 5px;
+	text-align: center;
 }
 .brand-logo a span{
 	display: block;
@@ -410,12 +410,9 @@ p {
 	white-space: nowrap;
 }
 .brand-logo a img{
-	max-width: 40px;
-	position: absolute;
-	left: 0;
-	top: 0;
-	display: inline-block;
-	vertical-align: middle;
+	max-width: 160px;
+	display: block;
+	margin: 0 auto;
 }
 .left-side-bar{
 	position: fixed;
@@ -433,7 +430,7 @@ p {
 	height: calc(100vh - 70px);
 }
 .sidebar-menu{
-	padding: 20px 5px 0;
+	padding: 20px 0px 20px;
 }
 .sidebar-menu .dropdown-toggle{
 	display: block;
