--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -104,7 +104,14 @@ p {
 .mb-20{margin-bottom: 20px;}
 .mb-15{margin-bottom: 15px;}
 
+.weight-400{font-weight: 400;}
+.weight-500{font-weight: 500;}
+.weight-600{font-weight: 600;}
+.weight-700{font-weight: 700;}
+
 .height-100-p{height: 100%;}
+
+.min-height-200px{min-height: 200px;}
 
 .bg-light-blue{background: #def2ff;}
 .color-light-blue{color: #def2ff;}
@@ -246,6 +253,26 @@ p {
 }
 .btn:focus, .btn.focus{
 	box-shadow: none !important;
+}
+
+.breadcrumb{
+	background: none;
+	padding: 0.75rem 0;
+}
+.breadcrumb-item.active{
+	color: #131e22;
+}
+.breadcrumb-item a{
+	color: #0099ff;
+	font-weight: 500;
+}
+.breadcrumb-item + .breadcrumb-item::before{
+	font-family: "FontAwesome";
+	content: "\f105";
+}
+
+.customscroll-10-p > .mCustomScrollBox > .mCSB_container{
+	padding: 10px;
 }
 /*==============================================================
 	Global Styles Start
@@ -553,4 +580,50 @@ p {
 .main-container{
 	padding: 70px 0 0 250px;
 	height: 100vh;
+}
+.page-header .dropdown-menu{
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+}
+
+.fontawesome-icon-list{
+	padding-top: 20px;
+}
+.fontawesome-icon-list .fa-hover{
+	padding-top: 8px;
+	padding-bottom: 8px;
+	margin-bottom: 20px;
+	cursor: pointer;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.fontawesome-icon-list .fa-hover:hover{
+	background: #def2ff;
+}
+.fontawesome-icon-list .fa-hover:hover a{
+	color: #0099ff;
+}
+.fontawesome-icon-list a{
+	display: block;
+	font-size: 16px;
+	font-weight: 400;
+	position: relative;
+	padding-left: 45px;
+	color: #131e22;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.fontawesome-icon-list a .fa{
+	position: absolute;
+	left: 10px;
+	top: 7px;
+	font-size: 18px;
 }
