--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -100,6 +100,7 @@ p {
 .pd-20{padding: 20px;}
 .pd-30{padding: 30px;}
 .margin-5{margin: 5px;}
+.mt-15{margin-top: 15px;}
 .mb-30{margin-bottom: 30px;}
 .mb-20{margin-bottom: 20px;}
 .mb-15{margin-bottom: 15px;}
@@ -294,13 +295,29 @@ p {
 	width: calc(100% - 250px);
 	background: #ffffff;
 	height: 70px;
-	padding: 10px 20px;
+	/*padding: 10px 20px;*/
 	-webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, .4);
 	-moz-box-shadow: 0px 0px 6px rgba(0, 0, 0, .4);
 	box-shadow: 0px 0px 6px rgba(0, 0, 0, .4);
 }
+.header-right .brand-logo{
+	float: left;
+	margin-right: 10px;
+	width: 70px;
+	display: none;
+}
+.header-right .brand-logo a{
+	padding: 13px 6px 5px;
+}
+.header-right .menu-icon{
+	position: relative;
+	right: 0;
+	float: left;
+	display: none;
+}
 .user-info-dropdown{
 	float: right;
+	padding: 10px 20px 10px 0;
 }
 .user-info-dropdown .dropdown-toggle{
 	display: block;
@@ -342,7 +359,8 @@ p {
 .user-notification{
 	float: right;
 	margin-right: 30px;
-	padding-top: 12px;
+	/*padding-top: 12px;*/
+	padding: 22px 20px 10px 0;
 }
 .user-notification .dropdown-toggle{
 	font-size: 20px;
@@ -411,6 +429,78 @@ p {
 /*==============================================================
 	Side Bar Start
 ==============================================================*/
+.menu-icon{
+	width: 47px;
+	height: 47px;
+	position: absolute;
+	right: -60px;
+	top: 14px;
+	background: #ffffff;
+	margin: 0;
+	-webkit-transform: rotate(0deg);
+	-moz-transform: rotate(0deg);
+	-o-transform: rotate(0deg);
+	transform: rotate(0deg);
+	-webkit-transition: .5s ease-in-out;
+	-moz-transition: .5s ease-in-out;
+	-o-transition: .5s ease-in-out;
+	transition: .5s ease-in-out;
+	cursor: pointer;
+}
+.menu-icon span {
+	display: block;
+	position: absolute;
+	height: 4px;
+	width: 70%;
+	margin: 0 auto;
+	background: #91a8b0;
+	border-radius: 9px;
+	opacity: 1;
+	left: 0;
+	right: 0;
+	-webkit-transform: rotate(0deg);
+	-moz-transform: rotate(0deg);
+	-o-transform: rotate(0deg);
+	transform: rotate(0deg);
+	-webkit-transition: .25s ease-in-out;
+	-moz-transition: .25s ease-in-out;
+	-o-transition: .25s ease-in-out;
+	transition: .25s ease-in-out;
+}
+.menu-icon span:nth-child(1) {
+	top: 10px;
+}
+.menu-icon span:nth-child(2),.menu-icon span:nth-child(3) {
+	top: 22px;
+}
+.menu-icon span:nth-child(4) {
+	top: 34px;
+}
+.menu-icon.open{
+	/*right: -50px;*/
+}
+.menu-icon.open span:nth-child(1) {
+	top: 18px;
+	width: 0%;
+	left: 50%;
+}
+.menu-icon.open span:nth-child(2) {
+	-webkit-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
+	-o-transform: rotate(45deg);
+	transform: rotate(45deg);
+}
+.menu-icon.open span:nth-child(3) {
+	-webkit-transform: rotate(-45deg);
+	-moz-transform: rotate(-45deg);
+	-o-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+}
+.menu-icon.open span:nth-child(4) {
+	top: 18px;
+	width: 0%;
+	left: 50%;
+}
 .brand-logo{
 	width: 250px;
 	height: 70px;
@@ -452,9 +542,32 @@ p {
 	-webkit-box-shadow: -2px 0px 10px rgba(0, 0, 0, .4);
 	-moz-box-shadow: -2px 0px 10px rgba(0, 0, 0, .4);
 	box-shadow: -2px 0px 10px rgba(0, 0, 0, .4);
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+}
+.left-side-bar:before{
+	content: "";
+	position: fixed;
+	left: 0;
+	top: 0;
+	z-index: -1;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.3);
+	display: none;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.left-side-bar.open{
+	left: 0;
 }
 .left-side-bar .menu-block{
 	height: calc(100vh - 70px);
+	background: #ffffff;
 }
 .sidebar-menu{
 	padding: 20px 0px 20px;
