--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1167,3 +1167,39 @@ textarea.form-control{
 	width: calc(100% - 100px);
 	font-size: 18px;
 }
+
+.docs-preview {
+	margin-right: -1rem;
+}
+
+.img-preview {
+	float: left;
+	margin-bottom: .5rem;
+	margin-right: .5rem;
+	overflow: hidden;
+}
+
+.img-preview > img {
+	max-width: 100%;
+}
+
+.preview-lg {
+	height: 9rem;
+	width: 16rem;
+}
+
+.preview-md {
+	height: 4.5rem;
+	width: 8rem;
+}
+
+.preview-sm {
+	height: 2.25rem;
+	width: 4rem;
+}
+
+.preview-xs {
+	height: 1.125rem;
+	margin-right: 0;
+	width: 2rem;
+}
