datatable responsive css

--- a/src/plugins/datatables/media/css/jquery.dataTables.css
+++ b/src/plugins/datatables/media/css/jquery.dataTables.css
@@ -174,7 +174,7 @@ table.dataTable.display tbody tr:hover.selected > .sorting_3, table.dataTable.or
   background-color: #a5b2cb;
 }
 table.dataTable.no-footer {
-  border-bottom: 1px solid #111;
+  border-bottom: 1px solid #ccc;
 }
 table.dataTable.nowrap th, table.dataTable.nowrap td {
   white-space: nowrap;
