--- a/src/plugins/datatables/media/css/responsive.dataTables.css
+++ b/src/plugins/datatables/media/css/responsive.dataTables.css
@@ -16,28 +16,28 @@ table.dataTable.dtr-inline.collapsed > tbody > tr[role="row"] > th:first-child {
 }
 table.dataTable.dtr-inline.collapsed > tbody > tr[role="row"] > td:first-child:before,
 table.dataTable.dtr-inline.collapsed > tbody > tr[role="row"] > th:first-child:before {
-	top: 9px;
+	top: 17px;
 	left: 4px;
-	height: 14px;
-	width: 14px;
+	height: 16px;
+	width: 16px;
 	display: block;
 	position: absolute;
-	color: white;
-	border: 2px solid white;
-	border-radius: 14px;
-	box-shadow: 0 0 3px #444;
+	color: #0099ff;
 	box-sizing: content-box;
 	text-align: center;
 	text-indent: 0 !important;
-	font-family: 'Courier New', Courier, monospace;
-	line-height: 14px;
-	content: '+';
-	background-color: #31b131;
+	font-family: "FontAwesome";
+	line-height: 16px;
+	font-size: 17px;
+	content: '\f0fe';
+}
+table.dataTable.dtr-inline.collapsed > tbody > tr.selected[role="row"] > td:first-child:before,
+table.dataTable.dtr-inline.collapsed > tbody > tr.selected[role="row"] > th:first-child:before {
+	color: #ffffff;
 }
 table.dataTable.dtr-inline.collapsed > tbody > tr.parent > td:first-child:before,
 table.dataTable.dtr-inline.collapsed > tbody > tr.parent > th:first-child:before {
-	content: '-';
-	background-color: #d33333;
+	content: '\f146';
 }
 table.dataTable.dtr-inline.collapsed.compact > tbody > tr > td:first-child,
 table.dataTable.dtr-inline.collapsed.compact > tbody > tr > th:first-child {
@@ -92,10 +92,11 @@ table.dataTable > tbody > tr.child:hover {
 	background: transparent !important;
 }
 table.dataTable > tbody > tr.child ul.dtr-details {
-	display: inline-block;
+	display: block;
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
+	white-space: normal;
 }
 table.dataTable > tbody > tr.child ul.dtr-details > li {
 	border-bottom: 1px solid #efefef;
@@ -104,13 +105,13 @@ table.dataTable > tbody > tr.child ul.dtr-details > li {
 table.dataTable > tbody > tr.child ul.dtr-details > li:first-child {
 	padding-top: 0;
 }
-table.dataTable > tbody > tr.child ul.dtr-details > li:last-child {
-	border-bottom: none;
-}
 table.dataTable > tbody > tr.child span.dtr-title {
-	display: inline-block;
+	display: block;
 	min-width: 75px;
-	font-weight: bold;
+	font-weight: 500;
+}
+table.dataTable > tbody > tr.child span.dtr-data{
+	font-size: 14px;
 }
 
 div.dtr-modal {
