--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -522,6 +522,15 @@ textarea.form-control{
 .docs-buttons .btn{margin-bottom: 5px;}
 
 .table th{font-weight: 600;}
+
+.plyr{
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+	-webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .35);
+	-moz-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .35);
+	box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .35);
+}
 /*==============================================================
 	Global Styles End
 ==============================================================*/
@@ -1202,4 +1211,7 @@ textarea.form-control{
 	height: 1.125rem;
 	margin-right: 0;
 	width: 2rem;
+}
+.btn-list .btn{
+	margin: 5px;
 }
