--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -110,6 +110,8 @@ p {
 .mx-h-400{max-height: 400px;}
 .mx-h-450{max-height: 450px;}
 .padding-top-10{padding-top: 10px;}
+.padding-top-30{padding-top: 30px;}
+.padding-bottom-30{padding-bottom: 30px;}
 .pd-10{padding: 10px;}
 .pd-20{padding: 20px;}
 .pd-ltr-20{padding: 20px 20px 0;}
@@ -192,6 +194,11 @@ p {
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	border-radius: 10px;
+}
+.border-radius-100{
+	-webkit-border-radius: 100%;
+	-moz-border-radius: 100%;
+	border-radius: 100%;
 }
 .box-shadow{
 	-webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, .1);
@@ -1221,4 +1228,183 @@ textarea.form-control{
 }
 #login-modal .login-box{
 	margin: 0;
+}
+.confirmation-btn{
+	width: 50px;
+	height: 50px;
+	margin: 0 auto;
+}
+
+.da-card{
+	position: relative;
+}
+.da-card .da-card-content{
+	padding: 20px;
+	background: #ffffff;
+}
+.da-card .da-card-photo{
+	position: relative;
+	overflow: hidden;
+}
+.da-card .da-card-photo img{
+	position: relative;
+	display: block;
+	width: 100%;
+	-webkit-transition: all 0.4s linear;
+	-moz-transition: all 0.4s linear;
+	-o-transition: all 0.4s linear;
+	transition: all 0.4s linear;
+}
+.da-card .da-overlay{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	opacity: 0;
+	overflow: hidden;
+	background: rgba(19,30,34,0.7);
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.da-card .da-overlay.da-slide-left{
+	left: -100%;
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
+	transition: all 0.5s ease-in-out;
+}
+.da-card .da-card-photo:hover .da-overlay.da-slide-left{
+	left: 0;
+}
+.da-card .da-overlay.da-slide-right{
+	right: -100%;
+	left: inherit;
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
+	transition: all 0.5s ease-in-out;
+}
+.da-card .da-card-photo:hover .da-overlay.da-slide-right{
+	right: 0;
+}
+.da-card .da-overlay.da-slide-top{
+	top: -100%;
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
+	transition: all 0.5s ease-in-out;
+}
+.da-card .da-card-photo:hover .da-overlay.da-slide-top{
+	top: 0;
+}
+.da-card .da-overlay.da-slide-bottom{
+	top: 100%;
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
+	transition: all 0.5s ease-in-out;
+}
+.da-card .da-card-photo:hover .da-overlay.da-slide-bottom{
+	top: 0;
+}
+.da-card .da-card-photo:hover img{
+	-ms-transform: scale(1.2) translateZ(0);
+	-webkit-transform: scale(1.2) translateZ(0);
+	transform: scale(1.2) translateZ(0);
+}
+.da-card .da-card-photo:hover .da-overlay{
+	opacity: 1;
+	filter: alpha(opacity=100);
+	-webkit-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	transform: translateZ(0);
+}
+.da-card .da-card-photo:hover .da-social{
+	opacity: 1;
+}
+.da-card .da-social{
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	padding: 20px;
+	justify-content: center;
+	color: #ffffff;
+	opacity: 0;
+	-webkit-transition: all 0.4s ease-in-out;
+	-moz-transition: all 0.4s ease-in-out;
+	-o-transition: all 0.4s ease-in-out;
+	transition: all 0.4s ease-in-out;
+}
+.da-card .da-social ul li{
+	float: left;
+}
+.da-card .da-social ul li a{
+	display: block;
+	width: 45px;
+	height: 45px;
+	border: 1px solid #ffffff;
+	line-height: 43px;
+	font-size: 20px;
+	text-align: center;
+	color: #ffffff;
+	-webkit-box-shadow: 0px 0px 0px 1px #ffffff;
+	-moz-box-shadow: 0px 0px 0px 1px #ffffff;
+	box-shadow: 0px 0px 0px 1px #ffffff;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.da-card .da-social ul li a:hover{
+	background: #ffffff;
+	color: #0099ff;
+}
+
+.nav-tabs.customtab .nav-link.active, .nav-tabs.customtab .nav-item.show .nav-link{
+	color: #0099ff;
+	border: 0;
+	border-bottom: 2px solid #0099ff;
+}
+.nav-tabs.customtab .nav-item{
+	margin-bottom: 0;
+}
+.nav-tabs.customtab .nav-link{
+	border: 0;
+	border-bottom: 2px solid transparent;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.nav-tabs.customtab .nav-link:hover, .nav-tabs.customtab .nav-link:focus{
+	color: #0099ff;
+	border: 0;
+	border-bottom: 2px solid #0099ff;
+}
+
+.vtabs{}
+.nav.vtabs{
+	border-bottom: 0;
+	border-right: 1px solid #dee2e6;
+	height: 100%;
+}
+.nav.vtabs .nav-link{
+	border-radius: 0;
+}
+.nav.vtabs .nav-link.active, .nav.vtabs .nav-item.show .nav-link{
+	border-right: 0;
+	border-color: #dee2e6;
+	color: #0099ff;
+}
+.nav.vtabs.nav-pills .nav-link.active, .nav.vtabs.nav-pills .nav-item.show .nav-link{
+	border-right: 0;
+	border-color: #dee2e6;
+	color: #ffffff;
+}
+.nav.vtabs.customtab .nav-link.active, .nav.vtabs.customtab .nav-item.show .nav-link{
+	border-color: #0099ff;
 }
