--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -116,6 +116,8 @@ p {
 .pd-20{padding: 20px;}
 .pd-ltr-20{padding: 20px 20px 0;}
 .pd-30{padding: 30px;}
+.pb-20{padding-bottom: 20px;}
+.pt-20{padding-top: 20px;}
 .margin-5{margin: 5px;}
 .mt-15{margin-top: 15px;}
 .mb-30{margin-bottom: 30px;}
@@ -538,6 +540,7 @@ textarea.form-control{
 	-moz-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .35);
 	box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .35);
 }
+.popover-header{font-weight: 500;}
 /*==============================================================
 	Global Styles End
 ==============================================================*/
