--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -118,6 +118,7 @@ p {
 .pd-ltr-20{padding: 20px 20px 0;}
 .pd-30{padding: 30px;}
 .pb-20{padding-bottom: 20px;}
+.pt-10{padding-top: 10px;}
 .pt-20{padding-top: 20px;}
 .margin-5{margin: 5px;}
 .mt-15{margin-top: 15px;}
@@ -127,6 +128,7 @@ p {
 .mb-10{margin-bottom: 10px;}
 .mb-5{margin-bottom: 5px !important;}
 
+.font-30{font-size: 30px;}
 .font-24{font-size: 24px;}
 .font-20{font-size: 20px;}
 .font-18{font-size: 18px;}
@@ -1479,7 +1481,9 @@ textarea.form-control{
 /*==============================================================
 	Timeline End
 ==============================================================*/
-
+/*==============================================================
+	sitemap Start
+==============================================================*/
 .list-unstyled > li > ul{
 	margin-left: 35px;
 }
@@ -1549,7 +1553,12 @@ textarea.form-control{
 .sitemap ul li.child:before, .sitemap ul li.child:after{
 	display: none;
 }
-
+/*==============================================================
+	sitemap Start
+==============================================================*/
+/*==============================================================
+	Calendar Start
+==============================================================*/
 .calendar-wrap{}
 .calendar-wrap .fc-event.ui-draggable-handle{
 	padding: 5px;
@@ -1569,3 +1578,61 @@ textarea.form-control{
 .fc-header-toolbar h2{
 	font-size: 24px;
 }
+/*==============================================================
+	Calendar End
+==============================================================*/
+/*==============================================================
+	Blog Start
+==============================================================*/
+.blog-wrap{
+	padding-bottom: 50px;
+}
+.blog-list{}
+.blog-list ul li{
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	margin-bottom: 40px;
+	background: #ffffff;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.blog-list ul li:hover{
+	-webkit-box-shadow: 0px 0px 48px rgba(0, 0, 0, 0.25);
+	-moz-box-shadow: 0px 0px 48px rgba(0, 0, 0, 0.25);
+	box-shadow: 0px 0px 48px rgba(0, 0, 0, 0.25);
+}
+.blog-list ul li .blog-img{
+	height: 100%;
+	min-height: 300px;
+	-webkit-border-radius: 4px 0px 0px 4px;
+	-moz-border-radius: 4px 0px 0px 4px;
+	border-radius: 4px 0px 0px 4px;
+	background-size: cover !important;
+}
+.blog-list ul li .blog-caption{
+	padding: 20px;
+	font-size: 16px;
+	color: #78909c;
+}
+.blog-list ul li .blog-caption h4{
+	font-size: 20px;
+	line-height: 30px;
+	font-weight: 500;
+	margin-bottom: 20px;
+}
+.blog-list ul li .blog-caption h4 a{
+	color: #131e22;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.blog-list ul li:hover .blog-caption h4 a{
+	color: #0099ff;
+}
+/*==============================================================
+	Blog Start
+==============================================================*/
