--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -43,6 +43,7 @@
 	.fc-toolbar .fc-left{float: none !important; padding-bottom: 10px;}
 	.fc-toolbar .fc-left:after, .fc-toolbar .fc-right:after{content: ""; clear: both; display: table;}
 	.fc-toolbar .fc-right{float: none !important; padding-bottom: 10px;}
+	.faq-wrap .card-header .btn{font-size: 17px;}
 }
 @media (max-width: 660px){
 	.docs-buttons .btn-group-crop{display: block;}
