--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1894,3 +1894,8 @@ textarea.form-control{
 /*==============================================================
 	Faq Page End
 ==============================================================*/
+
+.gallery-wrap{}
+.gallery-wrap > ul > li{
+	margin-bottom: 30px;
+}
