--- a/src/plugins/fancybox/src/css/share.css
+++ b/src/plugins/fancybox/src/css/share.css
@@ -1,96 +1,71 @@
 /* Share */
 
 .fancybox-share {
-    background: #f4f4f4;
-    border-radius: 3px;
-    max-width: 90%;
     padding: 30px;
-    text-align: center;
+    border-radius: 3px;
+    background: #f4f4f4;
+    max-width: 90%;
 }
 
 .fancybox-share h1 {
     color: #222;
-    font-size: 35px;
-    font-weight: 700;
     margin: 0 0 20px 0;
+    font-size: 33px;
+    font-weight: 700;
+    text-align: center;
 }
 
 .fancybox-share p {
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
-.fancybox-share__button {
+.fancybox-share p:first-of-type {
+    margin-right: -10px;
+}
+
+.fancybox-share_button {
+    display: inline-block;
+    text-decoration: none;
+    margin: 0 10px 10px 0;
+    padding: 10px 20px;
     border: 0;
     border-radius: 3px;
-    display: inline-block;
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 40px;
-    margin: 0 5px 10px 5px;
-    min-width: 130px;
-    padding: 0 15px;
-    text-decoration: none;
-    transition: all .2s;
-    user-select: none;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
+    background: #fff;
     white-space: nowrap;
+    font-size: 16px;
+    line-height: 23px;
+    user-select: none;
+    min-width: 140px;
+    color: #707070;
+    transition: all .2s;
 }
 
-.fancybox-share__button:visited,
-.fancybox-share__button:link {
-    color: #fff;
-}
-
-.fancybox-share__button:hover {
+.fancybox-share_button:focus,
+.fancybox-share_button:hover {
     text-decoration: none;
+    color: #333;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.3);
 }
 
-.fancybox-share__button--fb {
-    background: #3b5998;
+.fancybox-share_button svg {
+    margin-right: 5px;
+    width: 20px;
+    height: 20px;
+    vertical-align: text-bottom;
 }
 
-.fancybox-share__button--fb:hover {
-    background: #344e86;
-}
-
-.fancybox-share__button--pt {
-    background: #bd081d;
-}
-
-.fancybox-share__button--pt:hover {
-    background: #aa0719;
-}
-
-.fancybox-share__button--tw {
-    background: #1da1f2;
-}
-
-.fancybox-share__button--tw:hover {
-    background: #0d95e8;
-}
-
-.fancybox-share__button svg {
-    height: 25px;
-    margin-right: 7px;
-    position: relative;
-    top: -1px;
-    vertical-align: middle;
-    width: 25px;
-}
-
-.fancybox-share__button svg path {
-    fill: #fff;
-}
-
-.fancybox-share__input {
-    background: transparent;
-    border: 0;
-    border-bottom: 1px solid #d7d7d7;
-    border-radius: 0;
+.fancybox-share input {
+    box-sizing: border-box;
+    width: 100%;
+    margin: 5px 0 0 0;
+    padding: 10px 15px;
+    border: 1px solid #d7d7d7;
+    border-radius: 3px;
+    background: #ebebeb;
     color: #5d5b5b;
     font-size: 14px;
-    margin: 10px 0 0 0;
     outline: none;
-    padding: 10px 15px;
-    width: 100%;
 }
