--- a/src/plugins/fancybox/src/css/thumbs.css
+++ b/src/plugins/fancybox/src/css/thumbs.css
@@ -1,24 +1,26 @@
+
 /* Thumbs */
 
 .fancybox-thumbs {
-    background: #fff;
-    bottom: 0;
     display: none;
-    margin: 0;
-    -webkit-overflow-scrolling: touch;
-    -ms-overflow-style: -ms-autohiding-scrollbar;
-    padding: 2px 2px 4px 2px;
-    position: absolute;
-    right: 0;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	position: absolute;
     top: 0;
+    bottom: 0;
+	right: 0;
     width: 212px;
-    z-index: 99995;
+	margin: 0;
+	padding: 2px 2px 4px 2px;
+    background: #fff;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	-webkit-overflow-scrolling: touch;
+	-ms-overflow-style: -ms-autohiding-scrollbar;
+	box-sizing: border-box;
+	z-index: 99995;
 }
 
 .fancybox-thumbs-x {
-    overflow-x: auto;
     overflow-y: hidden;
+    overflow-x: auto;
 }
 
 .fancybox-show-thumbs .fancybox-thumbs {
@@ -30,21 +32,21 @@
 }
 
 .fancybox-thumbs > ul {
-    font-size: 0;
-    height: 100%;
-    list-style: none;
-    margin: 0;
+	list-style: none;
+	position: absolute;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
     overflow-x: hidden;
     overflow-y: auto;
-    padding: 0;
-    position: absolute;
-    position: relative;
+	font-size: 0;
     white-space: nowrap;
-    width: 100%;
 }
 
 .fancybox-thumbs-x > ul {
-    overflow: hidden;
+  overflow : hidden;
 }
 
 .fancybox-thumbs-y > ul::-webkit-scrollbar {
@@ -54,7 +56,7 @@
 .fancybox-thumbs-y > ul::-webkit-scrollbar-track {
     background: #fff;
     border-radius: 10px;
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 
 .fancybox-thumbs-y > ul::-webkit-scrollbar-thumb {
@@ -63,57 +65,63 @@
 }
 
 .fancybox-thumbs > ul > li {
-    backface-visibility: hidden;
-    cursor: pointer;
-    float: left;
-    height: 75px;
-    margin: 2px;
-    max-height: calc(100% - 8px);
+	float: left;
+	overflow: hidden;
+	padding: 0;
+	margin: 2px;
+	width: 100px;
+	height: 75px;
     max-width: calc(50% - 4px);
-    outline: none;
-    overflow: hidden;
-    padding: 0;
-    position: relative;
-    -webkit-tap-highlight-color: transparent;
-    width: 100px;
+    max-height: calc(100% - 8px);
+	position: relative;
+	cursor: pointer;
+	outline: none;
+	-webkit-tap-highlight-color: transparent;
+    backface-visibility: hidden;
+    box-sizing: border-box;
 }
 
-.fancybox-thumbs-loading {
-    background: rgba(0, 0, 0, .1);
+li.fancybox-thumbs-loading {
+	background: rgba(0,0,0,0.1);
 }
 
-.fancybox-thumbs > ul > li {
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.fancybox-thumbs > ul > li > img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	max-width: none;
+	max-height: none;
+	-webkit-touch-callout: none;
+	user-select: none;
 }
 
 .fancybox-thumbs > ul > li:before {
-    border: 4px solid #4ea7f9;
-    bottom: 0;
-    content: '';
-    left: 0;
-    opacity: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    transition: all .2s cubic-bezier(.25, .46, .45, .94);
-    z-index: 99991;
+	content: '';
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	border: 4px solid #4ea7f9;
+	z-index: 99991;
+	opacity: 0;
+	transition: all 0.2s cubic-bezier(.25,.46,.45,.94);
 }
 
-.fancybox-thumbs .fancybox-thumbs-active:before {
-    opacity: 1;
+.fancybox-thumbs > ul > li.fancybox-thumbs-active:before {
+	opacity: 1;
 }
 
 /* Styling for Small-Screen Devices */
-
 @media all and (max-width: 800px) {
-    .fancybox-thumbs {
-        width: 110px;
-    }
+	.fancybox-thumbs {
+		width: 110px;
+	}
+
     .fancybox-show-thumbs .fancybox-inner {
         right: 110px;
     }
+
     .fancybox-thumbs > ul > li {
         max-width: calc(100% - 10px);
     }
